--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,48 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Publish API Specification to Exchange
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  import_to_design_center:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Fetch all projects
         run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Check if the project is already created
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      - name: Create the project
+        run: echo Hello, world!
+
+      - name: Acquire a lock
+        run: echo Hello, world!
+
+      - name: Add the main specification file
+        run: echo Hello, world!
+
+      - name: Release the lock
+        run: echo Hello, world!
+
+  publish_to_exchange:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Check if the project is already created
+        run: echo Hello, world!
+        
+      - name: Publish the Exchange
+        run: echo Hello, world!
