--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,6 +8,13 @@ on:
 
   workflow_dispatch:
 
+env:
+  ORGANIZATION_ID: f60b1434-1059-4f0f-a28c-ccf4a9be05b2
+  OWNER_ID: 612cf2dd-9f92-4a08-97ed-f6be4faf06ca
+  CLASSIFIER: raml
+  
+  TOKEN: b6eaaaa1-4a10-4b05-b698-ec444674596d
+
 jobs:
   import_to_design_center:
     runs-on: ubuntu-latest
