--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Fetch all projects
-        run: "curl -s https://eu1.anypoint.mulesoft.com/designcenter/api-designer/projects --compressed -H 'Authorization: Bearer ${{env.TOKEN}}' -H 'x-organization-id: ${{env.ORGANIZATION_ID}}' 'x-owner-id: ${{env.OWNER_ID}}' -H 'Accept: application/json' -H 'x-origin: GitHub Piepline' -H 'Content-Type: application/json' -H 'Accept-Encoding: gzip, deflate, br' -o projects.json"
+        run: curl https://google.com
 
       - name: Check if the project is already created
         run: |
