--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,7 +55,7 @@ jobs:
       
       - name: Get specifications file
         id: getSpecificationContent
-        run: echo "::set-output SPEC_CONTENT=version::$(cat  ${{ github.workspace }}/${{env.SPEC}}))"
+        run: echo "::set-output name=SPEC_CONTENT::$(cat  ${{ github.workspace }}/${{env.SPEC}}))"
       
       - name: Add the main specification file
         run: |
