--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,7 +54,12 @@ jobs:
       
       - name: Get specifications file
         id: getSpecificationContent
-        run: echo "::set-output name=SPEC_CONTENT::$(cat ${{ github.workspace }}/${{env.SPEC}}))"
+        run: |
+          SPEC_CONTENT=$(cat ${{ github.workspace }}/${{env.SPEC}}))
+          SPEC_CONTENT="${SPEC_CONTENT//'%'/'%25'}"
+          SPEC_CONTENT="${SPEC_CONTENT//$'\n'/'%0A'}"
+          SPEC_CONTENT="${SPEC_CONTENT//$'\r'/'%0D'}"
+          echo "::set-output name=SPEC_CONTENT::SPEC_CONTENT"
       
       - name: Encode specifications file
         id: getJsonEncodedSpecification
